[package]
name = "acme-onion-ca"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2", features = ["uuid", "extras", "chrono"] }
diesel-async = { version = "0.2.1", features = ["postgres", "mobc"] }
diesel-derive-enum = { version = "2", features = ["postgres"] }
uuid = { version = "1", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
config = "0.13"
log = "0.4"
pretty_env_logger = "0.4"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "net"] }
tonic = "0.9"
prost = "0.11.8"
prost-wkt = "0.4"
prost-wkt-types = "0.4"
mobc = "0.8"
trust-dns-proto = "0.22"
rand = "0.8"
base64 = "0.21"
openssl = "0.10"
openssl-sys = "0.9"
backoff = { version = "0.4", features = ["tokio"] }

[build-dependencies]
tonic-build = "0.9"
prost-wkt-build = "0.4"