[package]
name = "acme-onion-ca"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2", features = ["uuid", "extras", "chrono", "postgres"] }
diesel-async = { version = "0.2.1", features = ["postgres", "mobc"] }
diesel-derive-enum = { version = "2", features = ["postgres"] }
diesel_migrations = "2"
uuid = { version = "1", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
config = "0.13"
log = "0.4"
pretty_env_logger = "0.4"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "net"] }
tonic = "0.9"
prost = "0.11.8"
prost-wkt = "0.4"
prost-wkt-types = "0.4"
mobc = "0.8"
trust-dns-proto = "0.22"
rand = "0.8"
base64 = "0.21"
openssl = "0.10"
openssl-sys = "0.9"
backoff = { version = "0.4", features = ["tokio"] }
reqwest = { version = "0.11", features = ["json"] }
byteorder = "1"
hex = "0.4"
libc = "0.2"
foreign-types-shared = "0.1"
x25519-dalek = "1"

[build-dependencies]
tonic-build = "0.9"
prost-wkt-build = "0.4"

[patch.crates-io]
openssl-sys = { git = "https://github.com/AS207960/rust-openssl", rev = "4d9f58286a60db8ea43a8682b4b05ace19f3a65e" }